<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:contentDescription="@string/photo_header"
                android:scaleType="centerCrop"
                android:src="@drawable/photo_header" />

            <View
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:alpha="0.5"
                android:background="#000000" />

            <ImageView
                android:id="@+id/image_view_photo_profile"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/photo_profile"
                android:scaleType="centerCrop"
                android:src="@drawable/photo_profile" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:contentDescription="@string/image_view_edit"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingLeft="0dp"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingStart="0dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:src="@drawable/ic_edit_white_24dp" />

            <TextView
                android:id="@+id/text_view_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/image_view_photo_profile"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/angelica_agnesia"
                android:textColor="@android:color/white" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bio" />

            <EditText
                android:id="@+id/edit_text_bio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/gender" />

            <RadioGroup
                android:id="@+id/radio_group_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_button_pria"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/pria" />

                <RadioButton
                    android:id="@+id/radio_button_wanita"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/wanita" />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/status" />

            <Spinner
                android:id="@+id/spinner_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/status" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/hobi" />

            <CheckBox
                android:id="@+id/check_box_main_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_game" />

            <CheckBox
                android:id="@+id/check_box_olahraga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/olahraga" />

            <CheckBox
                android:id="@+id/check_box_makan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/makan" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/nomor_handphone" />

            <EditText
                android:id="@+id/edit_text_nomor_handphone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="@string/save"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

</ScrollView>